--- a/win_update.yml
+++ b/win_update.yml
@@ -1,8 +1,8 @@
 ---
 - name: Enable Active Directory Users and Computers Snap-in
-  hosts: all
+  hosts: windows
   tasks:
-    - name: Ensure the 'RSAT: Active Directory Domain Services and Lightweight Directory Tools' feature is installed
+    - name: "Ensure the 'RSAT: Active Directory Domain Services and Lightweight Directory Tools' feature is installed"
       win_feature:
         name: RSAT-AD-Tools
         state: present
