--- a/win_update.yml
+++ b/win_update.yml
@@ -2,7 +2,7 @@
 - name: Enable Active Directory Users and Computers Snap-in
   hosts: all
   tasks:
-    - name: "Ensure the 'RSAT: Active Directory Domain Services and Lightweight Directory Tools' feature is installed"
+    - name: "Ensure the 'RSAT\: Active Directory Domain Services and Lightweight Directory Tools' feature is installed"
       win_feature:
         name: RSAT-AD-Tools
         state: present
